# TransportSDKDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tencent/transportsdkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniImpl.cpp
app/src/main/cpp/capture/: CaptureSessionState.h  camera_debug.h  camera_listeners.cpp  camera_manager.cpp  camera_manager.h  camera_preview.cpp  camera_preview.h  camera_utils.cpp  image_reader.cpp  image_reader.h  state_listener.h
app/src/main/cpp/decoder/audio/: OpenSLPlayer.cpp  OpenSLPlayer.h
app/src/main/cpp/decoder/video/: FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h
app/src/main/cpp/encode/video/: FFmpegVideoEncode.cpp  FFmpegVideoEncode.h  VideoDataListener.h
app/src/main/cpp/libtrtc/: trtc_cloud.h  trtc_cloud_defines.h  trtc_cloud_delegate.h  trtc_cloud_delegate_restricted.h  trtc_cloud_restricted.h
app/src/main/cpp/render/: OpenGlRender.cpp  OpenGlRender.h
app/src/main/cpp/sdkinterface/: TRTCCloudCore.cpp  TRTCCloudCore.h
app/src/main/cpp/util/: YUVDump.cpp  YUVDump.h  log_util.h  user_sig_generator.h
app/src/main/java/com/tencent/transportsdkdemo/: BaseActivity.java  MainActivity.java  SimpleEnterActivity.java  SimpleTransportActivity.java  TRTCManager.java
app/src/main/java/com/tencent/transportsdkdemo/capture/: CameraActivity.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_simple_enter.xml  activity_simple_transport.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tencent/transportsdkdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sh_dir/: build_264.sh  ffmpeg_build_android.sh
